# Polyspear

./: .gdlintrc  .gitignore  .gitmodules  .gutconfig.json  Default_Theme.tres  README.md  background_tilemap.tres  characters.aseprite  human_middle.tscn  human_poor.tscn  icon.svg.import  multi-instrukcja.md  new_script.gd  police.tscn  project.godot  tilesheet_transparent.png.import
ART/: Hpbar_background.png.import  Hpbar_bars.png.import  axe.png.import  background.png.import  background2.png.import  blue.png.import  characters1.png.import  characters10.png.import  characters11.png.import  characters12.png.import  characters13.png.import  characters14.png.import  characters15.png.import  characters16.png.import  characters2.png.import  characters3.png.import  characters4.png.import  characters5.png.import  characters6.png.import  characters7.png.import  characters8.png.import  characters9.png.import  corner.png.import  daggers.png.import  edge_of_the_map.png.import  goal.png.import  green.png.import  mace.png.import  pit.png.import  purple.png.import  red.png.import  rock1.png.import  rock2.png.import  spikes.png.import  spikes2.png.import  sword.png.import  tilesheet_transparent.png.import
Art/: Black_Hex.png.import  Dirt_Hex.png.import  Grass_Hex.png.import  Stone_Hex.png.import  background.png.import  basic_turret.png.import  border.png.import  bow.png.import  elf1.png.import  elf2.png.import  elf3.png.import  elf_archer.png.import  elf_cheap_guard.png.import  elf_hero_druid.png.import  elf_hero_noble.png.import  elf_hero_stalker.png.import  elf_royal_guard.png.import  elf_spearmen.png.import  enemy1.png.import  enemy_bullet.png.import  enemy_purple.png.import  enemy_rocket.png.import  evil_icon.png.import  icon.svg.import  knockback.png.import  laser.png.import  orc_hero_fighter.png.import  orc_hero_rouge.png.import  orc_hero_shieldguy.png.import  orc_knight.png.import  orc_spear_thrower.png.import  ork1.png.import  ork2.png.import  ork3.png.import  player.png.import  player_basic_ship.png.import  player_bullet.png.import  player_rocket.png.import  rock.png.import  rocket.png.import  (+9 more)
Audio/: combat_drums.wav.import  default_bus_layout.tres
Console_Dungeon_Alpha/: Manager.gd  Quest.gd  (+1 more)
LibSpear/: CMakeLists.txt  SConstruct
LibSpear/src/: battle_manager_fast.cpp  battle_manager_fast.hpp  battle_mcts.cpp  battle_mcts.hpp  battle_spell.hpp  battle_structs.cpp  battle_structs.hpp  cache_grid.hpp  data.hpp  fast_battle_manager.cpp  fast_battle_manager.hpp  fast_battle_manager.os  register_types.cpp  register_types.os  tile_grid_fast.cpp  tile_grid_fast.hpp
(+1346 files in other folders)
